<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_margin="20dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/app_nombre"
                android:id="@+id/editNombres"
                android:layout_margin="5dp"
                android:textSize="20sp"
                />
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/app_apellidos"
                    android:id="@+id/editApellidos"
                    android:layout_margin="5dp"
                    android:textSize="20sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="5dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_titulo_edad"
                        android:id="@+id/txtEdad"
                        android:textSize="20sp"
                        />
                    <EditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/app_edad"
                        android:id="@+id/editEdad"
                        android:textSize="20sp"
                        android:inputType="number"
                        android:digits="0,1,2,3,4,5,6,7,8,9"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_title_documento"
                    android:textSize="@dimen/font_size"
                    />

                <CheckBox
                    android:id="@+id/chkDocAutorizacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_documento"/>
                <CheckBox
                    android:id="@+id/chkDni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/app_dni"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_title_ticket"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:id="@+id/rbtnBoleto">
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_ticket_si"
                        android:id="@+id/rbtnsi"
                        />
                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_ticket_no"
                        android:id="@+id/rbtnno"
                        />
                </RadioGroup>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_button_ingreso"
                        android:id="@+id/btnValidarIngreso"
                        android:onClick="ValidarIngreso"


                        android:layout_margin="@dimen/button_margin"
                        android:paddingRight="@dimen/button_padding"
                        android:paddingLeft="@dimen/button_padding"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_button_reset"
                        android:id="@+id/btnResetear"
                        android:onClick="Resetear"
                        android:layout_margin="@dimen/button_margin"
                        android:paddingRight="@dimen/button_padding"
                        android:paddingLeft="@dimen/button_padding"
                        />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>

